Providing support for converting Text Block to String